Registro de formulario de usuarios Back-end

--- a/src/main/webapp/css/buscarUsers.css
+++ b/src/main/webapp/css/buscarUsers.css
@@ -15,7 +15,7 @@
 
 .buscar {
     display: flex;
-    flex-direction: column; /* Alinea el contenido del div verticalmente */
+    flex-wrap: wrap; /* Alinea el contenido del div verticalmente */
     justify-content: center; /* Centra el contenido del div horizontalmente */
     align-items: center; /* Centra el contenido del div verticalmente */
     padding: 20px;
