--- a/src/main/webapp/css/formPersona.css
+++ b/src/main/webapp/css/formPersona.css
@@ -139,6 +139,7 @@ textarea{
 .ck-editor__editable_inline {
     min-width: 1100px; /* Ajusta este valor según el ancho que desees */
     min-height: 200px;
+    max-width:1150px;
     padding: 10px;
     border: 2px solid #ccc;
   }
